--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 // Definir las credenciales correctas
                 const credentials = {
                     'bernardo': '12345',
-                    'ingreyeslara': 'Utd_2024',
+                    'ingreyeslara': 'utd_2024',
                 };
 
                 if (user === '' || password === '') {
