--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 const credentials = {
                     'bernardo': '12345',
                     'ingreyeslara': 'Utd_2024',
+                    'examen_parcial2': 'Voyporel100',
                 };
 
                 if (user === '' || password === '') {
